@@ -2,6 +2,7 @@
 Version=v1.3.2
 AppTitle=RoFage
 #English properties -> Default language
+ReportBug=Report a bug
 DuplicateExplanation=Preferences of roms' locations (1st = prefered)
 DuplicateAction=Deletion
 DuplicateWindowTitle=Duplicates Deletion
