@@ -1,3 +1,4 @@
+ReportBug=Report a bug
 DuplicateExplanation=Aus welchem Land sind die bevorzugten ROMs (oberstes = liebstes)
 DuplicateAction=L\u00F6schen
 DuplicateWindowTitle=Doppelte l\u00F6schen
